<resources>
    <string name="app_name">Dzixva_Maya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_1">Inicio</string>
    <string name="menu_2">Comida</string>
    <string name="menu_3">Mitos</string>
    <string name="menu_4">Leyendas</string>
    <string name="menu_5">Zonas arqueologicas</string>
    <string name="menu_6">Compartir</string>
    <string name="menu_7">Contactanos</string>
    <string name="menu_8">System 32</string>
    <string name="menu_9">Aula 2 Programacion</string>
    <string name="menu_10">Historias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
