<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/i_5"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/i_4"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/i_2"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_5"
            android:icon="@drawable/i_3"
            android:title="@string/menu_5" />

    </group>
    <item android:title="Comunidad">
        <menu>
            <item
                android:id="@+id/nav_10"
                android:icon="@drawable/i_7"
                android:title="@string/menu_10" />
        </menu>
    </item>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_6"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_6" />
            <item
                android:id="@+id/nav_7"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/menu_7" />
        </menu>
    </item>
    <item android:title="Compañia">
        <menu>
            <item
                android:id="@+id/nav_8"
                android:icon="@drawable/icono_c"
                android:title="@string/menu_8" />
            <item
                android:id="@+id/nav_9"
                android:icon="@drawable/icono_t"
                android:title="@string/menu_9" />
        </menu>
    </item>
</menu>
